--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
-
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.liquibase.change-log=classpath:db/changelog/master.xml
+spring.liquibase.enabled=true
+#spring.jpa.hibernate.ddl-auto=none
+#spring.datasource.url=jdbc:postgresql://localhost:49153/zoo-cali
+#spring.datasource.driverClassName=org.postgresql.Driver
+#spring.datasource.username=postgres
+#spring.datasource.password=postgrespw
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+#spring.liquibase.change-log=classpath:db/changelog/master.xml
+#spring.liquibase.enabled=false
+#spring.jpa.hibernate.ddl-auto=none
